testcases/valid/Or.prove
[ [a]=>[[a]or[b]] ]
[ [b]=>[[a]or[b]] ]

[ [ [not[a]]^[[a]or[b]] ] => [b] ]
[ [ [not[b]]^[[a]or[b]] ] => [a] ]
