testcases/invalid/otheror.prove
[ [[a]or[b]] = ![![a]![b]] ]
